--- a/frontend/src/styles/sass/box.sass
+++ b/frontend/src/styles/sass/box.sass
@@ -70,8 +70,10 @@
 
 .modal-footer
     @include global.flex($justify-content: center, $align-items: flex-start)
-    
 
 .center
     @include global.flex($justify-content: center, $align-items: center )
-    
+
+.textfield-group
+    @include global.flex($direction: column, $justify-content: center, $align-items: center)
+    width: 60%
