--- a/frontend/src/styles/sass/mui.sass
+++ b/frontend/src/styles/sass/mui.sass
@@ -26,3 +26,10 @@
 
 .full-width
     width: 100% !important
+
+.textfield
+    background-color: global.$white
+    margin: 1rem
+    width: 80%
+    @include global.border-radius($borderRadius: 10%)
+    
