--- a/frontend/src/styles/mui.css
+++ b/frontend/src/styles/mui.css
@@ -95,4 +95,11 @@ a {
   width: 100% !important;
 }
 
+.textfield {
+  background-color: #fff;
+  margin: 1rem;
+  width: 80%;
+  border-radius: 10% !important;
+}
+
 /*# sourceMappingURL=mui.css.map */
