add sign up page

--- a/frontend/src/styles/sass/mui.sass
+++ b/frontend/src/styles/sass/mui.sass
@@ -29,7 +29,6 @@
 
 .textfield
     background-color: global.$white
-    margin: 1rem
+    margin: 1rem !important
     width: 80%
     @include global.border-radius($borderRadius: 10%)
-    
