--- a/frontend/src/styles/mui.css
+++ b/frontend/src/styles/mui.css
@@ -97,7 +97,7 @@ a {
 
 .textfield {
   background-color: #fff;
-  margin: 1rem;
+  margin: 1rem !important;
   width: 80%;
   border-radius: 10% !important;
 }
