--- a/frontend/src/styles/sass/text.sass
+++ b/frontend/src/styles/sass/text.sass
@@ -7,6 +7,9 @@ $header-text-size: 3rem
     color: global.$red
     font-size: $xl-text !important
 
+.red-text
+    color: global.$red
+
 .divider-header
     font-size: $header-text-size !important
     color: global.$red
