--- a/frontend/src/styles/box.css
+++ b/frontend/src/styles/box.css
@@ -60,10 +60,10 @@ a {
 
 .left-align-box {
   display: flex !important;
-  flex-direction: row;
-  justify-content: flex-end;
-  align-items: flex-start;
-  flex-grow: 1;
+  flex-direction: row !important;
+  justify-content: flex-end !important;
+  align-items: flex-start !important;
+  flex-grow: 1 !important;
   margin-bottom: 1rem;
 }
 
@@ -77,10 +77,10 @@ a {
 
 .flex-container {
   display: flex !important;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: flex-start;
-  flex-grow: 0;
+  flex-direction: row !important;
+  justify-content: flex-start !important;
+  align-items: flex-start !important;
+  flex-grow: 0 !important;
 }
 
 .flex-child {
@@ -92,10 +92,10 @@ a {
 
 .right-align {
   display: flex !important;
-  flex-direction: row;
-  justify-content: flex-end;
-  align-items: flex-start;
-  flex-grow: 1;
+  flex-direction: row !important;
+  justify-content: flex-end !important;
+  align-items: flex-start !important;
+  flex-grow: 1 !important;
 }
 
 .small-box {
@@ -143,10 +143,10 @@ a {
   border-bottom: 1px solid #000;
   padding: 1rem 0;
   display: flex !important;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-  flex-grow: 1;
+  flex-direction: row !important;
+  justify-content: space-around !important;
+  align-items: center !important;
+  flex-grow: 1 !important;
 }
 .modal-details h2 {
   margin: 0 1rem;
@@ -156,26 +156,26 @@ a {
 
 .modal-footer {
   display: flex !important;
-  flex-direction: row;
-  justify-content: center;
-  align-items: flex-start;
-  flex-grow: 0;
+  flex-direction: row !important;
+  justify-content: center !important;
+  align-items: flex-start !important;
+  flex-grow: 0 !important;
 }
 
 .center {
   display: flex !important;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 0;
+  flex-direction: row !important;
+  justify-content: center !important;
+  align-items: center !important;
+  flex-grow: 0 !important;
 }
 
 .textfield-group {
   display: flex !important;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 0;
+  flex-direction: column !important;
+  justify-content: center !important;
+  align-items: center !important;
+  flex-grow: 0 !important;
   width: 60%;
 }
 
