show items from db

--- a/frontend/src/styles/sass/box.sass
+++ b/frontend/src/styles/sass/box.sass
@@ -77,3 +77,7 @@
 .textfield-group
     @include global.flex($direction: column, $justify-content: center, $align-items: center)
     width: 60%
+
+.full-width
+    width: 100% !important
+    margin: 0
