--- a/frontend/src/styles/sass/box.sass
+++ b/frontend/src/styles/sass/box.sass
@@ -1,7 +1,7 @@
 @use "_global.sass" as global
 
 .left-align-box
-    @include global.flex($justify-content: flex-end, $grow: 1)
+    @include global.flex($justify-content: flex-start, $grow: 1)
     margin-bottom: 1rem
 
 .no-padding
